--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@ body, html {
     width: 100%;
 }
 
+#second {
+    top:0;
+    height:100%;
+    width: 100%;
+}
+
 .split-vertical {
   box-sizing: border-box;
   height: 100%;
