--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,7 +92,7 @@ body, html {
 
 .selected.station {
     stroke-width:20;
-    stroke:yellow;
+    stroke:#ffb300;
 }
 
 .removed.station {
@@ -130,12 +130,12 @@ body, html {
 
 .departure-station-point {
     stroke-width:20;
-    stroke:red;
+    stroke:green;
 }
 
 .arrival-station-point {
     stroke-width:20;
-    stroke:green;
+    stroke:red;
 }
 
 .bar {
@@ -154,13 +154,13 @@ body, html {
 }
 
 .table-ball {
-    color:yellow;
+    color:#ffb300;
 }
 
 tr:first-child > .table-ball {
-    color:red;
+    color:green;
 }
 
 tr:last-child > .table-ball {
-    color:green;
+    color:red;
 }
